--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 title: Clever Name
 email: jonnie@cleverna.me
-description: >-
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Clever Name
 baseurl: ""
 url: "http://cleverna.me"
 github_username: JonnieCache
