--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Clever Name
 email: jonnie@cleverna.me
 description: Clever Name
 baseurl: ""
-url: "http://cleverna.me"
+url: "https://cleverna.me"
 github_username: JonnieCache
 excerpt_separator: <!-- more -->
 
