--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-gist
 
 permalink: /:year/:month/:day/:title/
 paginate_path: /posts/:num/
